# ETTrack_redux

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: datasets  yolo_outputs
pretrained/ettrack/: README.md
pretrained/yolox/: README.md
scripts/TrackEval/trackeval/datasets/: mot_challenge_2d_box.py
tools/: generate_yolo_detections.py  make_training_tracklets.py  run_ettrack.py  train_ettrack.py
tools/utils/: Exp.py  HOTA.py  MOTEvaluator.py  TrackletDataset.py
trackers/ettrack/: MOTDatasetET.py  augmentor.py  byte_track.py  ettrack.py  ettrack2.py  mot_evaluator_dance.py  tcn_transformer.py  tcn_transformer2.py  utils.py  utils2.py
trackers/ettrack/byte/: STrack.py  matching.py
trackers/ettrack/datasets/: MOTDatasetET.py  mot.py
trackers/ettrack/network/: loss.py  temporal_conv.py
yolox0.1/evaluators/: mot_evaluator_dance.py
yolox0.1/layers/: fast_coco_eval_api.py
yolox0.1/utils/: logger.py
